# rust-ntk-ffn

./: Cargo.toml  pyproject.toml
.cargo/: config.toml
src/: layerdata.rs  lib.rs
tests/: integration_test.rs
