[package]
name = "ntk_ffn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ntk_ffn"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = "0.21.0"
numpy = "0.21"
once_cell = "1.19.0"
itertools = "0.13.0"
#nalgebra = "*"